# decision-tree

./: .clang-format  .gitignore  .gitmodules  README.md  meson.build  pyproject.toml
data/: nursery.csv
docs/: docs.org  docs.tex
src/: analysis.ipynb  decision_tree.py  main.cpp  main.py  meson.build  tree.py
src/include/: rapidcsv.h
src/lib/: decision_tree.hpp
src/tree/: __init__.py  classic_tree.py  decision_tree.py  node.py  roulette_tree.py
